5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1724_2528.log
== TEST (2019-05-14 11:03:46) 
-- CODE:
n = int(input("Numero :"))

print(n/n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(n/n)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:20:45) 
-- CODE:
n = int(input("Numero :"))

l + 1

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:22:31) 
-- CODE:
n = int(input("Numero :"))

l + 1

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:22:42) 
-- CODE:
n = int(input("Numero :"))

l = 0

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:22:53) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:23:10) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:23:15) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:23:32) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:05) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 10

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:20) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 10

while (n > 0):
	n = n/h
	h = h*10
	l = l + 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:45) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 10

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:49) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 10

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:55) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 10

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:03) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 10

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:14) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:21) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:25) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:26:01) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:28:14) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:28:30) 
-- CODE:
n = int(input("Numero :"))

l = 0
h = 1

while (n > 1):
	n = n/h
	h = h*10
	l = l + 1
	print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    l + 1
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
